# RadMapAnalysis

./: .gitignore  CMakeLists.txt  README.md  compile.sh  doxygen.conf
doxygen/: README.md
doxygen/html/: CTSEventClusters_8h_source.html  CTSEvent_8h_source.html  Cluster_8h_source.html  Clusterer_8h_source.html  Dummy_8h_source.html  EventBase_8h_source.html  Fiber_8h_source.html  LinkDef_8h_source.html  Module_8h_source.html  Signal_8h_source.html  Track_8h_source.html  Tracker_8h_source.html  Utility_8h_source.html  annotated.html  classCTSEvent-members.html  classCTSEvent.html  classCTSEventClusters-members.html  classCTSEventClusters.html  classCTSEventClusters__coll__graph.map  classCTSEventClusters__coll__graph.md5  classCTSEventClusters__inherit__graph.md5  classCTSEvent__coll__graph.md5  classCTSEvent__inherit__graph.map  classCTSEvent__inherit__graph.md5  classCluster-members.html  classCluster.html  classClusterer-members.html  classClusterer.html  classDummy-members.html  classDummy.html  classEventBase-members.html  classEventBase.html  classEventBase__inherit__graph.map  classEventBase__inherit__graph.md5  classFiber-members.html  classFiber.html  classModule-members.html  classModule.html  classSignal-members.html  classSignal.html  (+38 more)
doxygen/html/search/: all_1.js  all_4.js  all_5.js  all_6.js  all_7.js  all_9.js  all_a.js  all_b.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_5.js  classes_6.js  enums_0.js  enumvalues_0.js  functions_0.js  functions_1.js  functions_3.js  functions_4.js  functions_6.js  functions_7.js  functions_8.js  namespaces_0.js  namespaces_1.js  pages_0.js  searchdata.js
doxygen/latex/: annotated.tex  classCTSEvent.tex  classCTSEventClusters.tex  classCTSEventClusters__coll__graph.md5  classCTSEventClusters__inherit__graph.md5  classCTSEvent__coll__graph.md5  classCTSEvent__inherit__graph.md5  classCluster.tex  classClusterer.tex  classDummy.tex  classEventBase.tex  classEventBase__inherit__graph.md5  classFiber.tex  classModule.tex  classSignal.tex  classTrack.tex  classTracker.tex  hierarchy.tex  md_README.tex  namespacemapping.tex  namespaces.tex  namespacetext.tex  refman.tex  todo.tex
include/: CTSEvent.h  CTSEventClusters.h  Cluster.h  ClusterEvent.h  Clusterer.h  Constants.h  Dummy.h  EventBase.h  Fiber.h  LinkDef.h  Module.h  Signal.h  Track.h  Tracker.h  Utility.h
info/: PSIlog  README.md  padiwa_configs.md
macros/: applyPadiwaGainCorrectionToSignals.C  calibrateCTSEvents.C  calibrateCTSEventsConfig0.C  checkCalibration.C  compareGainMaps.C  convertToCTSEvents.C  convertToCTSEventsCluster.C  convertToCalibratedCTSEvents.C  convertToCalibratedCTSEventsConfig2.C  convertToClusterEvents.C  convertToClusterEvents_backup.C  convertToEventBase.C  convertToModules.C  crappyTest.C  getCalibrationValuesForPionData.C  getEfficiency.C  getEfficiencyFromConfig0.C  getEfficiencyFromConfig2.C  getEfficiencyFromConfig3.C  getLinPadiwaCalib.C  getModuleGain.C  getPadiwaGainMap.C  getToTCalibrationValues.C  getToTCalibrationValuesForPionData.C  plotCTSEvent.C  plotClusterEvent.C  plotCtsEventCluster.C  readCTSEventTree.C  readEventTree.C  runDummy.C  sigShape_Pion.C  tryAroundClusterer.C  tryAroundTracker.C
src/: CTSEvent.cxx  CTSEventClusters.cxx  Cluster.cxx  ClusterEvent.cxx  Clusterer.cxx  Dummy.cxx  EventBase.cxx  Fiber.cxx  Module.cxx  Signal.cxx  Track.cxx  Tracker.cxx  Utility.cxx
